# sdlc-gitops-sample-stack

./: .gitignore  CONTRIBUTING.md  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  docker-compose.yaml  service.datadog.yaml  static-analysis.datadog.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: datadog-analysis.yaml  main-autorelease.yaml  pr-check.yaml  update-after-fork.yaml
.quarkus/cli/plugins/: quarkus-cli-catalog.json
apps/downstream-api/: README.md  pom.xml  run-tests-with-datadog.sh
apps/load-test-service/: Dockerfile  README.md
apps/load-test-service/scripts/: config.js  continuous.js  main.js  start.sh
apps/pass-api/: .copyright-overrides.yml  .env  .gitignore  .wwhrd.yml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  pass_api.go  primes_api.go  primes_api_test.go  write-licenses.sh
apps/pass-api/migrations/: 20240821140609_create_passes_table.up.sql  20240821141601_insert_sample_passes.down.sql  20240821141601_insert_sample_passes.up.sql
apps/pass-api/tasks/: README.md  __init__.py  go.py  requirements.txt
apps/pass-image-api/: .gitignore  AlpineTest-Dockerfile  Cargo.toml  Dockerfile  LICENSE-3rdparty.csv  README.md  compose.yaml  readme.md
apps/pass-image-api/scripts/: build-in-docker.sh  target.sh
apps/pass-image-api/src/: coordinates.rs  main.rs  telemetry_conf.rs  tiles.rs
apps/pass-summary-api/: .gitignore  README.md  pom.xml  run-tests-with-datadog.sh  write-licenses.sh
apps/simple-api/: .env  Dockerfile  README.md  docker-compose.yml  go.mod  main.go  pass_api.go  primes_api.go  primes_api_test.go
argocd-manifests/: kustomization.yaml
argocd-manifests/base/: application.yaml  namespace.yaml  notifications.yaml  postsync.yaml
docs/: _scratch_.md  setup-dev-lifecycle-visibility.md  setup-fork.md  setup-github-integration.md  setup-repo-secrets.md  setup-runtime-deploy.md  setup-runtime-vis.md  setup-runtime.md  setup-trigger-initial-build.md
k8s/: cleanup.sh  cloud-init-master.yaml  cloud-init-worker.yaml  notes.md  setup.sh
k8s/core-services/: argo-ingress.yaml  dd-agent.yaml  gitlab.yaml  setup.sh
manifests/base/: kustomization.yaml
manifests/base/db/: deployment.yaml  service.yaml
scripts/: minikube_build_and_deploy.sh  run-load-test.sh  update_deploy_branch.sh  update_manifests_for_release.sh
(+53 files in other folders)
