[package]
name = "pass-image-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
float-cmp = "0.10.0"
futures = "0.3.31"
futures-executor = { version = "0.2.0-beta" }
image = "0.25.2"
tokio = "1.40.0"
anyhow = "1.0.93"
actix-web = "4.9.0"
awc = { version = "3.5.1", features = ["rustls"] }
tracing-actix-web = "0.7.15"
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.18"
opentelemetry-stdout = "0.27.0"
opentelemetry_sdk = {version = "0.27.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.27.0", features = ["grpc-tonic", "trace", "metrics", "logs"]}
opentelemetry = "0.27.0"

