[package]
name = "pass-image-api"
version = "0.1.1"
edition = "2021"

[dependencies]
bytes = "1.7.2"
float-cmp = "0.10.0"
futures = "0.3.31"
futures-executor = { version = "0.2.0-beta" }
image = "0.25.2"
log = { version = "0.4.22", features = ["kv"] }
opentelemetry = "0.30.0"
opentelemetry-appender-log = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-resource-detectors = "0.9.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tokio = "1.43.0"
anyhow = "1.0.96"
actix-web = "4.9.0"
opentelemetry-instrumentation-actix-web = { version = "0.22.0", features = ["sync-middleware", "awc"] }
awc = { version = "3.5.1", features = ["rustls"] }
